# CMake-Tutorial

project_1/: CMakeCache.txt  CMakeLists.txt  DynamicsizeArray.cpp  Makefile  Tutorial  build.ninja  cmake_install.cmake  install_manifest.txt
project_1/MathFunctions/: CMakeLists.txt  Makefile  MathFunctions.cxx  MathFunctions.h  cmake_install.cmake  mysqrt.cxx  mysqrt.h
project_1/install/include/: MathFunctions.h
